--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+    <h1>Fandom Challenge</h1>
+    <p>Quiz coming soon...</p>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
