Add Rules section with header and start button

--- a/index.html
+++ b/index.html
@@ -7,8 +7,21 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <h1>Fandom Challenge</h1>
-    <p>Quiz coming soon...</p>
+    <header class="text-center">
+        <h1>Fandom Challenge</h1>
+    </header>
+    
+<section id="rules" class="container">
+        <h2>Rules</h2>
+        <ul>
+            <li>Questions are randomised each time you play.</li>
+            <li>Each question has four options: A, B, C and D.</li>
+            <li>You have one minute to answer each question.</li>
+            <li>Unanswered questions count as incorrect.</li>
+        </ul>
+        <button id="start-btn">Start Quiz</button>
+    </section>
+    
     <script src="assets/js/script.js"></script>
 </body>
 </html>
