--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
         </ul>
         <button id="start-btn">Start Quiz</button>
     </section>
+
+    <section id="quiz" class="container" style="display:none;">
+    <h2 id="question-text">Question will appear here</h2>
+    <div id="answers">
+        <button class="answer-btn">A</button>
+        <button class="answer-btn">B</button>
+        <button class="answer-btn">C</button>
+        <button class="answer-btn">D</button>
+    </div>
+    <p id="timer">Time left: 60s</p>
+</section>
     
     <script src="assets/js/script.js"></script>
 </body>
