Add Results section with score placeholder and restart button

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
     </div>
     <p id="timer">Time left: 60s</p>
 </section>
+
+<section id="results" class="container" style="display:none;">
+    <h2>Your Results</h2>
+    <p id="score-text">Your score will appear here.</p>
+    <button id="restart-btn">Play Again</button>
+</section>
     
     <script src="assets/js/script.js"></script>
 </body>
