Apply Bootstrap styling to Start Quiz button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li>You have one minute to answer each question.</li>
             <li>Unanswered questions count as incorrect.</li>
         </ul>
-        <button id="start-btn">Start Quiz</button>
+        <button id="start-btn" class="btn btn-primary">Start Quiz</button>
     </section>
 
     <section id="quiz" class="container" style="display:none;">
