--- a/index.html
+++ b/index.html
@@ -1,48 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fandom Challenge</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+  <body>
     <header class="text-center">
-        <h1>Fandom Challenge</h1>
+      <h1>Fandom Challenge</h1>
     </header>
-    
-<section id="rules" class="container">
-        <h2>Rules</h2>
-        <ul>
-            <li>Questions are randomised each time you play.</li>
-            <li>Each question has four options: A, B, C and D.</li>
-            <li>You have one minute to answer each question.</li>
-            <li>Unanswered questions count as incorrect.</li>
-        </ul>
-        <button id="start-btn" class="btn btn-primary">Start Quiz</button>
+
+    <section id="rules" class="container">
+      <h2>Rules</h2>
+      <ul>
+        <li>Questions are randomised each time you play.</li>
+        <li>Each question has four options: A, B, C and D.</li>
+        <li>You have one minute to answer each question.</li>
+        <li>Unanswered questions count as incorrect.</li>
+      </ul>
+      <button id="start-btn" class="btn btn-primary">Start Quiz</button>
     </section>
 
-    <section id="quiz" class="container" style="display:none;">
-    <h2 id="question-text">Question will appear here</h2>
-    <div id="answers">
+    <section id="quiz" class="container" style="display: none">
+      <h2 id="question-text">Question will appear here</h2>
+      <div id="answers">
         <button class="answer-btn">A</button>
         <button class="answer-btn">B</button>
         <button class="answer-btn">C</button>
         <button class="answer-btn">D</button>
-    </div>
-    <p id="timer">Time left: 60s</p>
-</section>
+      </div>
+      <p id="timer">Time left: 60s</p>
+    </section>
 
-<section id="results" class="container" style="display:none;">
-    <h2>Your Results</h2>
-    <p id="score-text">Your score will appear here.</p>
-    <button id="restart-btn">Play Again</button>
-</section>
-    
+    <section id="results" class="container" style="display: none">
+      <h2>Your Results</h2>
+      <p id="score-text">Your score will appear here.</p>
+      <button id="restart-btn">Play Again</button>
+    </section>
+
+    <script src="assets/js/questions.js"></script>
     <script src="assets/js/script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
