Add category selection section to HTML

--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
       <h1>Fandom Challenge</h1>
     </header>
 
-    <section id="rules" class="container">
+    <section id="category-selection" class="container">
+  <h2>Select a Category</h2>
+  <button class="btn btn-secondary category-btn" data-category="avatar">Avatar: The Last Airbender</button>
+  <button class="btn btn-secondary category-btn" data-category="got">Game of Thrones</button>
+</section>
+
+    <section id="rules" class="container" style="display: none;">
       <h2>Rules</h2>
       <ul>
         <li>Questions are randomised each time you play.</li>
