--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
   <h2>Select a Category</h2>
   <button class="btn btn-secondary category-btn" data-category="avatar">Avatar: The Last Airbender</button>
   <button class="btn btn-secondary category-btn" data-category="got">Game of Thrones</button>
+
+<div class="mt-3">
+    <button id="view-rules-btn" class="btn btn-info">View Rules</button>
+  </div>
 </section>
 
     <section id="rules" class="container" style="display: none;">
