Add back button to Rules section with style

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <li>Unanswered questions count as incorrect.</li>
       </ul>
       <button id="start-btn" class="btn btn-primary">Start Quiz</button>
+<button id="back-to-categories-btn" class="btn btn-secondary mt-2">Back to Categories</button>
     </section>
 
     <section id="quiz" class="container" style="display: none">
