Add IDs to category buttons in index.html

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     <section id="category-selection" class="container">
   <h2>Select a Category</h2>
-  <button class="btn btn-secondary category-btn" data-category="avatar">Avatar: The Last Airbender</button>
-  <button class="btn btn-secondary category-btn" data-category="got">Game of Thrones</button>
+  <button id="avatar-btn" class="btn btn-secondary category-btn" data-category="avatar">Avatar: The Last Airbender</button>
+  <button id="got-btn" class="btn btn-secondary category-btn" data-category="got">Game of Thrones</button>
 
 <div class="mt-3">
     <button id="view-rules-btn" class="btn btn-info">View Rules</button>
