Add results section with score and restart btn

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
       <p id="timer">Time left: 60s</p>
     </section>
 
-    <section id="results" class="container" style="display: none">
-      <h2>Your Results</h2>
-      <p id="score-text">Your score will appear here.</p>
-      <button id="restart-btn">Play Again</button>
-    </section>
+    <div id="results" class="container" style="display: none;">
+  <h2>Quiz Complete!</h2>
+  <p id="score-text"></p>
+  <button id="restart-btn" class="btn btn-primary">Back to Categories</button>
+</div>
 
     <script src="assets/js/questions.js"></script>
     <script src="assets/js/script.js"></script>
