Add restart button variable

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
         <button class="answer-btn">D</button>
       </div>
       <p id="timer">Time left: 60s</p>
+
+      <button id="restart-midway-btn" class="btn btn-warning mt-3 d-none">
+    Restart Quiz
+  </button>
     </section>
 
     <div id="results" class="container" style="display: none;">
