Style quiz answer buttons with btn-danger

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
     <section id="quiz" class="container" style="display: none">
       <h2 id="question-text">Question will appear here</h2>
       <div id="answers">
-        <button class="answer-btn">A</button>
-        <button class="answer-btn">B</button>
-        <button class="answer-btn">C</button>
-        <button class="answer-btn">D</button>
+        <button class="answer-btn btn btn-danger">A</button>
+        <button class="answer-btn btn btn-danger">B</button>
+        <button class="answer-btn btn btn-danger">C</button>
+        <button class="answer-btn btn btn-danger">D</button>
       </div>
-      <p id="timer">Time left: 60s</p>
+      <p id="timer">Time left: 15s</p>
 
       <button id="restart-midway-btn" class="btn btn-warning mt-3 d-none">
     Restart Quiz
