--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
     <section id="category-selection" class="container">
   <h2>Select a Category</h2>
-  <button id="avatar-btn" class="btn btn-secondary category-btn" data-category="avatar">Avatar: The Last Airbender</button>
-  <button id="got-btn" class="btn btn-secondary category-btn" data-category="got">Game of Thrones</button>
+  <button id="avatar-btn" class="btn btn-danger category-btn" data-category="avatar">Avatar: The Last Airbender</button>
+  <button id="got-btn" class="btn btn-danger category-btn" data-category="got">Game of Thrones</button>
 
 <div class="mt-3">
-    <button id="view-rules-btn" class="btn btn-info">View Rules</button>
+    <button id="view-rules-btn" class="btn btn-outline-light">View Rules</button>
   </div>
 </section>
 
@@ -35,7 +35,7 @@
         <li>You have one minute to answer each question.</li>
         <li>Unanswered questions count as incorrect.</li>
       </ul>
-<button id="back-to-categories-btn" class="btn btn-secondary mt-2">Back to Categories</button>
+<button id="back-to-categories-btn" class="btn btn-outline-light mt-2">Back to Categories</button>
     </section>
 
     <section id="quiz" class="container" style="display: none">
@@ -56,7 +56,7 @@
     <div id="results" class="container" style="display: none;">
   <h2>Quiz Complete!</h2>
   <p id="score-text"></p>
-  <button id="restart-btn" class="btn btn-primary">Back to Categories</button>
+  <button id="restart-btn" class="btn btn-outline-light">Back to Categories</button>
 </div>
 
     <script src="assets/js/questions.js"></script>
