--- a/index.html
+++ b/index.html
@@ -13,58 +13,56 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <header class="text-center">
-      <h1>Fandom Challenge</h1>
-    </header>
+  <header class="text-center mb-4">
+    <h1>Fandom Challenge</h1>
+  </header>
 
-    <section id="category-selection" class="container">
-  <h2>Select a Category</h2>
-  <button id="avatar-btn" class="btn btn-danger category-btn" data-category="avatar">Avatar: The Last Airbender</button>
-  <button id="got-btn" class="btn btn-danger category-btn" data-category="got">Game of Thrones</button>
+  <section id="category-selection" class="container mt-4">
+    <h2 class="mb-3">Select a Category</h2>
+    <button id="avatar-btn" class="btn btn-danger category-btn mb-2" data-category="avatar">Avatar: The Last Airbender</button>
+    <button id="got-btn" class="btn btn-danger category-btn mb-2" data-category="got">Game of Thrones</button>
 
-<div class="mt-3">
-    <button id="view-rules-btn" class="btn btn-outline-light">View Rules</button>
+    <div class="mt-3">
+      <button id="view-rules-btn" class="btn btn-outline-light">View Rules</button>
+    </div>
+  </section>
+
+  <section id="rules" class="container mt-5" style="display: none;">
+    <h2 class="mb-3">Rules</h2>
+    <ul>
+      <li>Questions are randomised each time you play.</li>
+      <li>Each question has four options: A, B, C and D.</li>
+      <li>You have one minute to answer each question.</li>
+      <li>Unanswered questions count as incorrect.</li>
+    </ul>
+    <button id="back-to-categories-btn" class="btn btn-outline-light mt-3">Back to Categories</button>
+  </section>
+
+  <section id="quiz" class="container mt-5" style="display: none">
+    <h2 id="question-text" class="mb-4">Question will appear here</h2>
+    <div id="answers" class="mb-3">
+      <button class="answer-btn btn btn-danger mb-2">A</button>
+      <button class="answer-btn btn btn-danger mb-2">B</button>
+      <button class="answer-btn btn btn-danger mb-2">C</button>
+      <button class="answer-btn btn btn-danger mb-2">D</button>
+    </div>
+    <p id="timer" class="mb-3">Time left: 15s</p>
+
+    <button id="restart-midway-btn" class="btn btn-warning mt-3 d-none">Restart Quiz</button>
+  </section>
+
+  <div id="results" class="container mt-5" style="display: none;">
+    <h2 class="mb-3">Quiz Complete!</h2>
+    <p id="score-text" class="mb-4"></p>
+    <button id="restart-btn" class="btn btn-outline-light">Back to Categories</button>
   </div>
-</section>
 
-    <section id="rules" class="container" style="display: none;">
-      <h2>Rules</h2>
-      <ul>
-        <li>Questions are randomised each time you play.</li>
-        <li>Each question has four options: A, B, C and D.</li>
-        <li>You have one minute to answer each question.</li>
-        <li>Unanswered questions count as incorrect.</li>
-      </ul>
-<button id="back-to-categories-btn" class="btn btn-outline-light mt-2">Back to Categories</button>
-    </section>
-
-    <section id="quiz" class="container" style="display: none">
-      <h2 id="question-text">Question will appear here</h2>
-      <div id="answers">
-        <button class="answer-btn btn btn-danger">A</button>
-        <button class="answer-btn btn btn-danger">B</button>
-        <button class="answer-btn btn btn-danger">C</button>
-        <button class="answer-btn btn btn-danger">D</button>
-      </div>
-      <p id="timer">Time left: 15s</p>
-
-      <button id="restart-midway-btn" class="btn btn-warning mt-3 d-none">
-    Restart Quiz
-  </button>
-    </section>
-
-    <div id="results" class="container" style="display: none;">
-  <h2>Quiz Complete!</h2>
-  <p id="score-text"></p>
-  <button id="restart-btn" class="btn btn-outline-light">Back to Categories</button>
-</div>
-
-    <script src="assets/js/questions.js"></script>
-    <script src="assets/js/script.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <script src="assets/js/questions.js"></script>
+  <script src="assets/js/script.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+    crossorigin="anonymous"
+  ></script>
+</body>
 </html>
