--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-  <header class="text-center mb-4">
-    <h1>Fandom Challenge</h1>
-  </header>
+  <div class="container d-flex justify-content-center align-items-center min-vh-100">
+    <div class="quiz-container">
+      <div class="quiz-header text-center">
+        <h1 class="mb-3">Fandom Challenge</h1>
+        <div class="progress">
+          <div class="progress-bar bg-danger" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0"
+            aria-valuemax="100"></div>
+        </div>
+      </div>
 
   <section id="category-selection" class="container mt-4">
     <h2 class="mb-3">Select a Category</h2>
