--- a/index.html
+++ b/index.html
@@ -23,15 +23,16 @@
         </div>
       </div>
 
-  <section id="category-selection" class="container mt-4">
-    <h2 class="mb-3">Select a Category</h2>
-    <button id="avatar-btn" class="btn btn-danger category-btn mb-2" data-category="avatar">Avatar: The Last Airbender</button>
-    <button id="got-btn" class="btn btn-danger category-btn mb-2" data-category="got">Game of Thrones</button>
-
-    <div class="mt-3">
-      <button id="view-rules-btn" class="btn btn-outline-light">View Rules</button>
-    </div>
-  </section>
+  <section id="category-selection">
+        <h2 class="mb-4">Select a Category</h2>
+        <div class="d-grid gap-2">
+          <button id="avatar-btn" class="btn btn-danger category-btn" data-category="avatar">Avatar: The Last Airbender</button>
+          <button id="got-btn" class="btn btn-danger category-btn" data-category="got">Game of Thrones</button>
+        </div>
+        <div class="mt-3 text-center">
+          <button id="view-rules-btn" class="btn btn-outline-light">View Rules</button>
+        </div>
+      </section>
 
   <section id="rules" class="container mt-5" style="display: none;">
     <h2 class="mb-3">Rules</h2>
