Update rules section layout and styling

--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
         </div>
       </section>
 
-  <section id="rules" class="container mt-5" style="display: none;">
-    <h2 class="mb-3">Rules</h2>
-    <ul>
-      <li>Questions are randomised each time you play.</li>
-      <li>Each question has four options: A, B, C and D.</li>
-      <li>You have one minute to answer each question.</li>
-      <li>Unanswered questions count as incorrect.</li>
-    </ul>
-    <button id="back-to-categories-btn" class="btn btn-outline-light mt-3">Back to Categories</button>
-  </section>
+  <section id="rules" style="display: none;">
+        <h2 class="mb-3">Rules</h2>
+        <ul class="text-start">
+          <li>Questions are randomised each time you play.</li>
+          <li>Each question has four options: A, B, C and D.</li>
+          <li>You have one minute to answer each question.</li>
+          <li>Unanswered questions count as incorrect.</li>
+        </ul>
+        <button id="back-to-categories-btn" class="btn btn-outline-light mt-3">Back to Categories</button>
+      </section>
 
   <section id="quiz" class="container mt-5" style="display: none">
     <h2 id="question-text" class="mb-4">Question will appear here</h2>
