--- a/index.html
+++ b/index.html
@@ -45,18 +45,19 @@
         <button id="back-to-categories-btn" class="btn btn-outline-light mt-3">Back to Categories</button>
       </section>
 
-  <section id="quiz" class="container mt-5" style="display: none">
-    <h2 id="question-text" class="mb-4">Question will appear here</h2>
-    <div id="answers" class="mb-3">
-      <button class="answer-btn btn btn-danger mb-2">A</button>
-      <button class="answer-btn btn btn-danger mb-2">B</button>
-      <button class="answer-btn btn btn-danger mb-2">C</button>
-      <button class="answer-btn btn btn-danger mb-2">D</button>
-    </div>
-    <p id="timer" class="mb-3">Time left: 15s</p>
-
-    <button id="restart-midway-btn" class="btn btn-warning mt-3 d-none">Restart Quiz</button>
-  </section>
+  <section id="quiz" style="display: none;">
+        <p id="question-text" class="question"></p>
+        <div id="answers" class="options">
+  <button class="answer-btn btn btn-danger mb-2">A</button>
+  <button class="answer-btn btn btn-danger mb-2">B</button>
+  <button class="answer-btn btn btn-danger mb-2">C</button>
+  <button class="answer-btn btn btn-danger mb-2">D</button>
+</div>
+        <div class="quiz-footer">
+          <div id="timer" class="timer">Time left: 15s</div>
+          <button id="restart-midway-btn" class="btn btn-warning d-none">Restart Quiz</button>
+        </div>
+      </section>
 
   <div id="results" class="container mt-5" style="display: none;">
     <h2 class="mb-3">Quiz Complete!</h2>
