--- a/index.html
+++ b/index.html
@@ -59,10 +59,12 @@
         </div>
       </section>
 
-  <div id="results" class="container mt-5" style="display: none;">
-    <h2 class="mb-3">Quiz Complete!</h2>
-    <p id="score-text" class="mb-4"></p>
-    <button id="restart-btn" class="btn btn-outline-light">Back to Categories</button>
+  <section id="results" style="display: none;" class="results">
+        <h2 class="mb-3">Quiz Complete!</h2>
+        <p id="score-text" class="score"></p>
+        <button id="restart-btn" class="btn btn-outline-light">Back to Categories</button>
+      </section>
+    </div>
   </div>
 
   <script src="assets/js/questions.js"></script>
