--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div class="d-grid gap-2">
           <button id="avatar-btn" class="btn btn-danger category-btn" data-category="avatar">Avatar: The Last Airbender</button>
           <button id="got-btn" class="btn btn-danger category-btn" data-category="got">Game of Thrones</button>
+          <button id="opm-btn" class="btn btn-danger category-btn">One Punch Man</button>
         </div>
         <div class="mt-3 text-center">
           <button id="view-rules-btn" class="btn btn-outline-light">View Rules</button>
