Add visually-hidden class and accessibility

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       </section>
 
   <section id="quiz" style="display: none;">
+    <h2 class="visually-hidden">Quiz</h2>
         <p id="question-text" class="question" aria-live="polite"></p>
         <div id="answers" class="options">
   <button class="answer-btn btn btn-danger mb-2">A</button>
