--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <section id="rules" style="display: none;">
         <h2 class="mb-3">Rules</h2>
-        <ul class="text-start">
+        <ul id="rules-list" class="text-start">
           <li>Questions are randomised each time you play.</li>
           <li>Each question has four options: A, B, C and D.</li>
           <li>You have one minute to answer each question.</li>
