--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
       </section>
 
-  <section id="rules" style="display: none;">
+  <section id="rules" class="hide">
         <h2 class="mb-3">Rules</h2>
         <ul id="rules-list" class="text-start">
           <li>Questions are randomised each time you play.</li>
