Move inline display:none to CSS

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         aria-label="Return to category selection from rules">Back to Categories</button>
       </section>
 
-  <section id="quiz" style="display: none;">
+  <section id="quiz">
     <h2 class="visually-hidden">Quiz</h2>
         <p id="question-text" class="question" aria-live="polite"></p>
         <div id="answers" class="options">
@@ -66,7 +66,7 @@
         </div>
       </section>
 
-  <section id="results" style="display: none;" class="results">
+  <section id="results" class="results">
         <h2 class="mb-3">Quiz Complete!</h2>
         <p id="score-text" class="score"></p>
         <button id="restart-btn" class="btn btn-outline-light" 
