--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="quiz-header text-center">
         <h1 class="mb-3">Fandom Challenge</h1>
         <div class="progress">
-          <div class="progress-bar bg-danger" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0"
+          <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="0" aria-valuemin="0"
             aria-valuemax="100"></div>
         </div>
       </div>
