--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
       <div class="quiz-header text-center">
         <h1 class="mb-3">Fandom Challenge</h1>
         <div class="progress">
-          <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="0" aria-valuemin="0"
-            aria-valuemax="100"></div>
+          <div class="progress-bar bg-danger progress-bar-striped progress-bar-animated" role="progressbar" 
+          aria-valuenow="0" aria-valuemin="0"
+    aria-valuemax="100"></div>
         </div>
       </div>
 
