--- a/index.html
+++ b/index.html
@@ -75,19 +75,9 @@
         <p id="score-text" class="score"></p>
         <button id="restart-btn" class="btn btn-outline-light" 
         aria-label="Restart quiz and return to category selection">Back to Categories</button>
+        <button id="submit-score-btn" class="btn btn-danger ms-2" 
+        aria-label="Submit score and view leaderboard">Submit Score</button>
       </section>
-
-      <div id="leaderboard-entry" class="mt-3">
-        <label for="player-initials" class="form-label">Enter your initials:</label>
-        <input type="text" id="player-initials" maxlength="3" class="form-control text-center" />
-        <button id="submit-score-btn" class="btn btn-danger mt-2">Submit Score</button>
-      </div>
-
-      <div id="leaderboard" class="mt-3">
-        <h3 class="mb-2">Leaderboard</h3>
-        <ol id="leaderboard-list"></ol>
-      </div>
-
     </div>
   </div>
 
