--- a/leaderboard.html
+++ b/leaderboard.html
@@ -9,6 +9,10 @@
 <body>
 <div class="container text-center mt-5">
     <h1>Leaderboard</h1>
+    <div class="mt-3">
+    <input type="text" id="player-initials" maxlength="3" placeholder="Your initials" class="form-control mb-2">
+    <button id="submit-score-btn" class="btn btn-danger">Submit Score</button>
+</div>
     <ol id="leaderboard-list" class="mt-3"></ol>
     <button onclick="window.location.href='index.html'" class="btn btn-outline-light mt-3">
         Back to Categories
