--- a/leaderboard.html
+++ b/leaderboard.html
@@ -1,23 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Leaderboard</title>
-<link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-<div class="container text-center mt-5">
-    <h1>Leaderboard</h1>
-    <div class="mt-3">
-    <input type="text" id="player-initials" maxlength="3" placeholder="Your initials" class="form-control mb-2">
-    <button id="submit-score-btn" class="btn btn-danger">Submit Score</button>
-</div>
-    <ol id="leaderboard-list" class="mt-3"></ol>
-    <button onclick="window.location.href='index.html'" class="btn btn-outline-light mt-3">
-        Back to Categories
-    </button>
-</div>
-<script src="assets/js/leaderboard.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Leaderboard</title>
+
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
+  </head>
+  <body>
+    <div class="container d-flex justify-content-center align-items-center min-vh-100">
+      <div class="quiz-container">
+
+        <!-- Header -->
+        <div class="quiz-header text-center">
+          <h1 class="mb-3">Leaderboard</h1>
+          <div class="progress">
+            <div class="progress-bar bg-danger progress-bar-striped progress-bar-animated"
+                 role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div>
+
+        <!-- Leaderboard section -->
+        <section id="leaderboard" class="text-center">
+          <h2 class="mb-4">Top Scores</h2>
+
+          <!-- Initials input and submit -->
+          <div class="mb-4">
+            <input type="text" id="player-initials" maxlength="3" placeholder="Your initials"
+                   class="form-control mb-2">
+            <button id="submit-score-btn" class="btn btn-danger w-100">Submit Score</button>
+          </div>
+
+          <!-- Scores list -->
+          <ol id="leaderboard-list" class="text-start mb-4"></ol>
+
+          <!-- Action buttons -->
+          <div class="d-grid gap-2">
+            <button onclick="window.location.href='index.html'"
+                    class="btn btn-outline-light">
+              Back to Categories
+            </button>
+            <button id="clear-leaderboard-btn" class="btn btn-danger">
+              Clear Leaderboard
+            </button>
+          </div>
+        </section>
+
+      </div>
+    </div>
+
+    <script src="assets/js/leaderboard.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
