Add Go to Leaderboard button

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <button id="restart-btn" class="btn btn-outline-light" 
         aria-label="Restart quiz and return to category selection">Back to Categories</button>
         <button id="submit-score-btn" class="btn btn-danger ms-2" 
-        aria-label="Submit score and view leaderboard">Submit Score</button>
+        aria-label="Submit score and view leaderboard">Go to Leaderboard</button>
       </section>
     </div>
   </div>
