Replace onclick buttons with anchor links

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         aria-label="Restart quiz and return to category selection">Back to Categories</button>
         
         <button id="go-to-leaderboard-btn" class="btn btn-danger ms-2"
-        onclick="window.location.href='leaderboard.html'">
+        a href="leaderboard.html">
         Go to Leaderboard
       </button>
 
