--- a/leaderboard.html
+++ b/leaderboard.html
@@ -48,7 +48,7 @@
           <!-- Action buttons -->
           <div class="d-flex justify-content-center gap-2">
   <button id="submit-score-btn" class="btn btn-danger btn-sm">Submit Score</button>
-  <button onclick="window.location.href='index.html'" class="btn btn-outline-light btn-sm">Back to Categories</button>
+  <a href="index.html" class="btn btn-outline-light btn-sm">Back to Categories</button>
   <button id="clear-leaderboard-btn" class="btn btn-danger btn-sm">Clear Leaderboard</button>
 </div>
         </section>
