Fix leaderboard buttons and closing tags

--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
         <button id="restart-btn" class="btn btn-outline-light" 
         aria-label="Restart quiz and return to category selection">Back to Categories</button>
         
-        <button id="go-to-leaderboard-btn" class="btn btn-danger ms-2"
-        a href="leaderboard.html">
-        Go to Leaderboard
-      </button>
+        <a href="leaderboard.html" id="go-to-leaderboard-btn" 
+   class="btn btn-danger ms-2">
+   Go to Leaderboard
+</a>
 
       </section>
     </div>
