--- a/leaderboard.html
+++ b/leaderboard.html
@@ -34,12 +34,10 @@
           <h2 class="mb-4">Top Scores</h2>
 
           <!-- Scores list -->
-          <ol id="leaderboard-list" class="mb-4"
-              style="font-family: 'Press Start 2P', cursive; text-align: center; list-style-position: inside;">
-          </ol>
+          <ol id="leaderboard-list" class="mb-4"></ol>
 
           <!-- Hidden initials input (revealed on Submit Score) -->
-<div id="initials-box" style="display:none;" class="mb-3">
+<div id="initials-box" class="mb-3">
   <input type="text" id="player-initials" maxlength="3" placeholder="Your initials"
          class="form-control mb-2">
   <button id="confirm-submit-btn" class="btn btn-danger w-100">Confirm</button>
