--- a/404.html
+++ b/404.html
@@ -4,19 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Page Not Found - Fandom Challenge</title>
+
+  <!-- Bootstrap CSS -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
     rel="stylesheet"
     integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
     crossorigin="anonymous">
+
+    <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body class="error-page d-flex flex-column justify-content-center align-items-center min-vh-100 text-center text-light bg-dark">
+
+  <!-- Error code heading -->
   <h1 class="error-code display-1">404</h1>
+
+  <!-- Error messages -->
   <p class="error-message lead">Looks like you’ve wandered into an unknown fandom territory.</p>
   <p class="error-message lead">Don’t worry! Your quiz journey is just a click away.</p>
+
+  <!-- Button to return to homepage -->
   <a href="index.html" class="btn btn-danger btn-lg mt-3" aria-label="Return to Fandom Challenge homepage">Back to Quiz</a>
 
+  <!-- Bootstrap JS -->
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
