--- a/leaderboard.html
+++ b/leaderboard.html
@@ -1,59 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leaderboard</title>
 
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <!-- Favicon -->
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
 
+    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
-      crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+      crossorigin="anonymous"
+    />
 
-    <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Custom font for leaderboard -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <div class="container d-flex justify-content-center align-items-center min-vh-100">
+    <!-- Main container to center content vertically and horizontally -->
+    <div
+      class="container d-flex justify-content-center align-items-center min-vh-100"
+    >
       <div class="quiz-container">
-
-        <!-- Header -->
+        <!-- Header with title and progress bar -->
         <div class="quiz-header text-center">
           <h1 class="mb-3">Leaderboard</h1>
           <div class="progress">
-            <div class="progress-bar bg-danger progress-bar-striped progress-bar-animated"
-                 role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+            <div
+              class="progress-bar bg-danger progress-bar-striped progress-bar-animated"
+              role="progressbar"
+              aria-valuenow="0"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
           </div>
         </div>
 
         <!-- Leaderboard section -->
         <section id="leaderboard" class="text-center">
-          <h2 class="mb-4">Top Scores</h2>
+          <h2 class="mb-4">High Scores</h2>
 
           <!-- Scores list -->
           <ol id="leaderboard-list" class="mb-4"></ol>
 
-          <!-- Hidden initials input (revealed on Submit Score) -->
-<div id="initials-box" class="mb-3">
-  <input type="text" id="player-initials" maxlength="3" placeholder="Your initials"
-         class="form-control mb-2">
-  <button id="confirm-submit-btn" class="btn btn-danger w-100">Confirm</button>
-</div>
+          <!-- Hidden initials input shown after submitting score -->
+          <div id="initials-box" class="mb-3">
+            <input
+              type="text"
+              id="player-initials"
+              maxlength="3"
+              placeholder="Your initials"
+              class="form-control mb-2"
+            />
+            <button id="confirm-submit-btn" class="btn btn-danger w-100">
+              Confirm
+            </button>
+          </div>
 
-          <!-- Action buttons -->
+          <!-- Action buttons for submitting, going back, or clearing leaderboard -->
           <div class="d-flex justify-content-center gap-2">
-  <button id="submit-score-btn" class="btn btn-danger btn-sm">Submit Score</button>
-  <a href="index.html" class="btn btn-outline-light btn-sm">Back to Categories</a>
-  <button id="clear-leaderboard-btn" class="btn btn-danger btn-sm">Clear Leaderboard</button>
-</div>
+            <button id="submit-score-btn" class="btn btn-danger btn-sm">
+              Submit Score
+            </button>
+            <a href="index.html" class="btn btn-outline-light btn-sm"
+              >Back to Categories</a
+            >
+            <button id="clear-leaderboard-btn" class="btn btn-danger btn-sm">
+              Clear Leaderboard
+            </button>
+          </div>
         </section>
-
       </div>
     </div>
 
+    <!-- JavaScript files -->
     <script src="assets/js/leaderboard.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
