--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
 
   <!-- JavaScript files -->
   <script src="assets/js/questions.js"></script>
+  <!-- Confetti library -->
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
+  <!-- Quiz logic -->
   <script src="assets/js/script.js"></script>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
