--- a/leaderboard.html
+++ b/leaderboard.html
@@ -31,18 +31,9 @@
       class="container d-flex justify-content-center align-items-center min-vh-100"
     >
       <div class="quiz-container">
-        <!-- Header with title and progress bar -->
+        <!-- Header with title -->
         <div class="quiz-header text-center">
           <h1 class="mb-3">Leaderboard</h1>
-          <div class="progress">
-            <div
-              class="progress-bar bg-danger progress-bar-striped progress-bar-animated"
-              role="progressbar"
-              aria-valuenow="0"
-              aria-valuemin="0"
-              aria-valuemax="100"
-            ></div>
-          </div>
         </div>
 
         <!-- Leaderboard section -->
