Change button to Back to Categories

--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
   <button class="answer-btn btn btn-danger mb-2">D</button>
 </div>
 
-<!-- Timer and Restart Midway button -->
+<!-- Timer and Restart button -->
         <div class="quiz-footer">
           <div id="timer" class="timer">Time left: 15s</div>
           <button id="restart-midway-btn" class="btn btn-warning d-none" 
-          aria-label="Restart current quiz">Restart Quiz</button>
+          aria-label="Restart current quiz">Back to Categories</button>
         </div>
       </section>
 
@@ -110,10 +110,10 @@
     </div>
   </div>
 
-  <!-- JavaScript files -->
-  <script src="assets/js/questions.js"></script>
   <!-- Confetti library -->
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
+  <!-- JavaScript files -->
+  <script src="assets/js/questions.js"></script>
   <!-- Quiz logic -->
   <script src="assets/js/script.js"></script>
   <script
