--- a/index.html
+++ b/index.html
@@ -27,11 +27,6 @@
       <!-- Quiz header with title and progress bar -->
       <div class="quiz-header text-center">
         <h1 class="mb-3">Fandom Challenge</h1>
-        <div class="progress">
-          <div class="progress-bar bg-danger progress-bar-striped progress-bar-animated" role="progressbar" 
-          aria-valuenow="0" aria-valuemin="0"
-    aria-valuemax="100"></div>
-        </div>
       </div>
 
       <!-- Category Selection Section -->
@@ -71,6 +66,11 @@
 
       <!-- Quiz Section -->
   <section id="quiz">
+    <div class="progress">
+          <div class="progress-bar bg-danger progress-bar-striped progress-bar-animated" role="progressbar" 
+          aria-valuenow="0" aria-valuemin="0"
+    aria-valuemax="100"></div>
+        </div>
     <h2 class="visually-hidden">Quiz</h2>
 
     <!-- Question text -->
@@ -94,6 +94,10 @@
 
       <!-- Results Section -->
   <section id="results" class="results">
+    <div class="progress mb-3">
+  <div class="progress-bar bg-danger progress-bar-striped progress-bar-animated"
+     role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
+</div>
         <h2 class="mb-3">Quiz Complete!</h2>
         <!-- Display user score -->
         <p id="score-text" class="score"></p>
