--- a/index.html
+++ b/index.html
@@ -24,13 +24,16 @@
   <div class="container d-flex justify-content-center align-items-center min-vh-100">
     <div class="quiz-container">
 
-      <!-- Quiz header with title and progress bar -->
-      <div class="quiz-header text-center">
-        <h1 class="mb-3">Fandom Challenge</h1>
-      </div>
-
-      <!-- Category Selection Section -->
+      <!-- Intro and category Selection Section -->
   <section id="category-selection">
+    <div id="home-intro" class="text-center mb-3">
+  <div class="quiz-header text-center">
+  <h1 class="mb-3">Welcome to Fandom Challenge</h1>
+</div>
+  <p>
+    Test your knowledge with quizzes from your favourite fandoms! Each quiz is randomised and challenges your knowledge and speed.
+  </p>
+</div>
         <h2 class="mb-4">Select a Category</h2>
 
         <!-- Category buttons grid -->
@@ -45,11 +48,23 @@
         <div class="mt-3 text-center">
           <button id="view-rules-btn" class="btn btn-outline-light" aria-label="View quiz rules">View Rules</button>
         </div>
+
+        <footer id="home-footer" class="text-center mt-4">
+        <p>
+          View the project on
+          <a href="https://github.com/LouisCE/fandom-challenge" target="_blank" rel="noopener noreferrer">
+            GitHub
+          </a>
+        <br>
+        Developed by Louis</p>
+      </footer>
       </section>
 
       <!-- View Rules button -->
   <section id="rules" class="hide">
-        <h2 class="mb-3">Rules</h2>
+        <div class="quiz-header text-center">
+  <h1 class="mb-3">Rules</h1>
+</div>
 
         <!-- List of quiz rules -->
         <ul id="rules-list" class="text-start">
@@ -66,6 +81,9 @@
 
       <!-- Quiz Section -->
   <section id="quiz">
+    <div class="quiz-header text-center">
+        <h1 class="mb-3">Fandom Challenge</h1>
+      </div>
     <div class="progress">
           <div class="progress-bar bg-danger progress-bar-striped progress-bar-animated" role="progressbar" 
           aria-valuenow="0" aria-valuemin="0"
