Update leaderboard heading to arcade font

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -25,7 +25,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
-  <body>
+  <body id="leaderboard-page">
     <!-- Main container to center content vertically and horizontally -->
     <div
       class="container d-flex justify-content-center align-items-center min-vh-100"
