Remove Clear Leaderboard button feature

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -57,17 +57,13 @@
             </button>
           </div>
 
-          <!-- Action buttons for submitting, going back, or clearing leaderboard -->
+          <!-- Action buttons for submitting score and going back -->
           <div class="d-flex justify-content-center gap-2">
             <button id="submit-score-btn" class="btn btn-danger btn-sm">
               Submit Score
             </button>
             <a href="index.html" class="btn btn-outline-light btn-sm"
-              >Back to Categories</a
-            >
-            <button id="clear-leaderboard-btn" class="btn btn-danger btn-sm">
-              Clear Leaderboard
-            </button>
+              >Back to Categories</a>
           </div>
         </section>
       </div>
