Move progress bar styling to CSS

--- a/index.html
+++ b/index.html
@@ -160,12 +160,11 @@
           <h2 class="mb-3">Quiz Complete!</h2>
           <div class="progress mb-3">
             <div
-              class="progress-bar bg-danger progress-bar-striped progress-bar-animated"
+              class="progress-bar bg-danger progress-bar-striped progress-bar-animated results-bar"
               role="progressbar"
               aria-valuenow="100"
               aria-valuemin="0"
               aria-valuemax="100"
-              style="width: 100%"
             ></div>
           </div>
 
