--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </section>
 
         <!-- Quiz Section -->
-        <section id="quiz">
+        <section id="quiz" class="hide">
           <div class="quiz-header text-center">
             <h1 class="mb-3">Fandom Challenge</h1>
           </div>
@@ -155,39 +155,34 @@
           </div>
         </section>
 
-        <!-- Results Section -->
-        <section id="results" class="results">
-          <h2 class="mb-3">Quiz Complete!</h2>
-          <div class="progress mb-3">
-            <div
-              class="progress-bar bg-danger progress-bar-striped progress-bar-animated results-bar"
-              role="progressbar"
-              aria-valuenow="100"
-              aria-valuemin="0"
-              aria-valuemax="100"
-            ></div>
-          </div>
+        <section id="results" class="hide">
+  <div class="quiz-header">
+    <h1 class="mb-3">Quiz Complete!</h1>
+  </div>
 
-          <!-- Display user score -->
-          <p id="score-text" class="score"></p>
+  <div class="progress">
+    <div
+      class="progress-bar bg-danger progress-bar-striped progress-bar-animated results-bar"
+      role="progressbar"
+      aria-valuenow="100"
+      aria-valuemin="0"
+      aria-valuemax="100"
+    ></div>
+  </div>
 
-          <!-- Restart quiz button -->
-          <button
-            id="restart-btn"
-            class="btn btn-outline-light"
-            aria-label="Restart quiz and return to category selection"
-          >
-            Back to Categories
-          </button>
+  <!-- Display user score -->
+  <p id="score-text" class="score text-start"></p>
 
-          <!-- Link to leaderboard -->
-          <a
-            href="leaderboard.html"
-            id="go-to-leaderboard-btn"
-            class="btn btn-danger ms-2"
-            >Go to Leaderboard</a
-          >
-        </section>
+  <!-- Buttons centered only -->
+  <div class="d-flex justify-content-center gap-2 mt-3 w-100">
+    <button id="restart-btn" class="btn btn-outline-light">
+      Back to Categories
+    </button>
+    <a href="leaderboard.html" id="go-to-leaderboard-btn" class="btn btn-danger">
+      Go to Leaderboard
+    </a>
+  </div>
+</section>
       </div>
     </div>
 
