Move leaderboard styling from JS to CSS

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -44,18 +44,18 @@
           <ol id="leaderboard-list" class="mb-4"></ol>
 
           <!-- Hidden initials input shown after submitting score -->
-          <div id="initials-box" class="mb-3">
-            <input
-              type="text"
-              id="player-initials"
-              maxlength="3"
-              placeholder="Your initials"
-              class="form-control mb-2"
-            />
-            <button id="confirm-submit-btn" class="btn btn-danger w-100">
-              Confirm
-            </button>
-          </div>
+          <div id="initials-box" class="mb-3 hidden">
+  <input
+    type="text"
+    id="player-initials"
+    maxlength="3"
+    placeholder="Your initials"
+    class="form-control mb-2"
+  />
+  <button id="confirm-submit-btn" class="btn btn-danger w-100">
+    Confirm
+  </button>
+</div>
 
           <!-- Action buttons for submitting score and going back -->
           <div class="d-flex justify-content-center gap-2">
