Fix broken ARIA reference for quiz section

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <!-- Quiz Section -->
         <section id="quiz" class="hide" aria-labelledby="quiz-heading">
           <div class="quiz-header text-center">
-            <h1 class="mb-3">Fandom Challenge</h1>
+            <h1 id="quiz-heading" class="mb-3">Fandom Challenge</h1>
           </div>
           <div class="progress">
             <div
