Remove unnecessary role and aria-level from h1

--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
     class="error-page d-flex flex-column justify-content-center align-items-center min-vh-100 text-center text-light bg-dark"
   >
     <!-- Error code heading -->
-    <h1 class="error-code display-1" role="heading" aria-level="1">404</h1>
+    <h1 class="error-code display-1">404</h1>
 
     <!-- Error messages -->
     <section aria-label="Error explanation">
